# reasoning-receipt

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
agent/: __init__.py  analyst.py  calibration.py  calibration_store.py  critic.py  critic_v2.py  ensemble.py  ensemble_assembly.py  ensemble_mocks.py  gemini_call.py  loop.py  memory.py  merkle.py  mimo_call.py  resolver.py  scanner.py  trace.py  trace_v3.py  trader.py
contracts/: foundry.toml
dashboard/: .gitignore  .npmrc  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
docs/: ARC-OSS.md  ARCHITECTURE.md  DEMO.md  PITCH-SCRIPT.md  SUBMISSION.md  canteen-walkthrough.md  mcp.md  x402-real-settlement.md
scripts/: backfill-memory.py  cctp-demo.py  circle-setup.py  cloudflare-dns-setup.py  cusdc-cli.py  daemon-daily-run.ps1  demo-runner.py  deploy-contract.sh  deploy-registry-v2.sh  export-snapshot.py  generate-demo-narration.py  healthcheck.sh  multi-consumer-burst.py  pre-submit-check.sh  record-demo-web.py  record-demo.py  refresh-snapshot.ps1  run-agent.sh  run-services.ps1  safe-push.sh  seed-demo.py  services-watchdog.ps1  setup.sh  smoke-publish-v2.py  svg-to-png.js  verify-receipt.py
server/: __init__.py  chain.py  demo.py  events.py  facilitator.py  main.py  mcp_paywalled.py  routes.py  verify.py  x402.py
storage/: __init__.py  db.py  irys.py
tests/: conftest.py  test-e2e-stub.py  test-events.py  test-resolver.py  test-scanner.py  test-trace-canonical.py  test-trader.py  test-verify.py  test_calibration.py  test_calibration_store.py  test_critic_v2.py  (+3 more)
(+83 files in other folders)
