[project]
name = "reasoning-receipt"
version = "0.1.0"
description = "x402-paywalled AI oracle for prediction markets where the reasoning trace is the product."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vu Minh Tang" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "google-genai>=0.8.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "web3>=7.5",
    "eth-account>=0.13",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "rich>=13.9",
    "click>=8.1",
    "supervisor; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "respx>=0.21",
]

[project.scripts]
rr-agent = "agent.loop:main"
rr-server = "server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "server", "storage", "wallets"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "test-*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
